<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlanCardUI"
    android:background="@color/backPlans">

    <ImageButton
        android:id="@+id/closeActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/close_activity"
        android:background="@null"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="20dp"/>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settingsPlan"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/closeActivity"
        app:layout_constraintLeft_toLeftOf="parent">

        <EditText
            android:id="@+id/inputPlan"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@drawable/custom_input"
            android:hint="@string/hintEdit"
            android:padding="14dp"
            android:layout_margin="5dp"
            android:gravity="top"
            tools:ignore="MissingConstraints" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/setImportance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/inputPlan"
            android:layout_marginHorizontal="5dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/custom_input"
            android:padding="10dp">

            <TextView
                android:id="@+id/txtImportance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="7dp"
                android:text="@string/importancePlan"
                android:textStyle="bold"
                android:textSize="16sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <RadioGroup
                android:id="@+id/choiceIm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/txtImportance"
                app:layout_constraintLeft_toLeftOf="parent">

                <RadioButton
                    android:id="@+id/low"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/greenDB"
                    android:text="@string/chLow"
                    android:textColor="@drawable/green_choice"
                    android:textStyle="bold"/>

                <RadioButton
                    android:id="@+id/med"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chMed"
                    android:textColor="@drawable/yel_choice"
                    android:textStyle="bold"
                    android:buttonTint="@color/yellow"/>

                <RadioButton
                    android:id="@+id/high"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/redRB"
                    android:text="@string/chHigh"
                    android:textColor="@drawable/red_choice"
                    android:textStyle="bold" />

            </RadioGroup>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/blockDeadline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/custom_input"
            android:padding="10dp"
            app:layout_constraintTop_toBottomOf="@+id/setImportance">

            <TextView
                android:id="@+id/txtDeadline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtDeadline"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_margin="7dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <Switch
                android:id="@+id/deadSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_margin="5dp"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

            <TextView
                android:id="@+id/txtDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintRight_toLeftOf="@+id/deadSwitch"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_margin="7dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/butDel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginStart="5dp"
            android:backgroundTint="@color/butDel"
            android:text="@string/btnDel"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="13sp"
            app:layout_constraintTop_toBottomOf="@id/blockDeadline"
            app:layout_constraintLeft_toLeftOf="parent" />

        <Button
            android:id="@+id/butSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtSave"
            android:textStyle="bold"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:backgroundTint="@color/yellow"
            app:layout_constraintTop_toBottomOf="@+id/blockDeadline"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="8dp"/>


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>